# Procurement-agent

./: .env.example  README.md  dashboard.py  pyproject.toml  requirements.txt
data/: airline_inventory_parts.csv  airline_suppliers_list.csv  procurement.db
src/: check_supplier_emails.py  check_supplier_emails_v1.py  database.py  email_agent.py  email_tool.py  gemini_agent.py  gmail_tool.py  inventory_tool.py  manager_agent.py  models.py  notification_tool.py  order_manager.py  procurement_agent.py  quantity_modifier.py  request_store.py  risk_utils.py  supplier_response_agent.py  supplier_tool.py  telegram_listener.py  test_email.py  user_state.py
