[project]
name = "procurement-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "streamlit>=1.58.0",
]
